--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -16,7 +16,7 @@ title: "Für Jugendeinrichtungen"
                    Zum anderen richten wir uns an pädagogische Fachkräfte und Jugendeinrichtungen, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. Wie?</br>
                    Auch als Träger von Jugendeinrichtungen, Bildungsverband oder NGO kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. Wie?</br>
                 <br>
-                   Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen & Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: Jede*r ist bei uns willkommen!
+                   Wichtig ist uns vor allem die Vielfalt: Wir wollen mit Jugendlichen & Einrichtungen in ganz Deutschland zusammenarbeiten. Egal ob Stadt oder Land, Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld*in: <strong>Jede*r ist bei uns willkommen!</strong>
                 </br>
                 </p>   
             </div>
@@ -66,7 +66,7 @@ title: "Für Jugendeinrichtungen"
  <div class="beneath-sections jumbotron fond__grey-bright">
     <div class="container text__black">
         <div class="col-lg-12">
-            <h2>  Wie kann man als Fachkraft oder Jugendeinrichtung bzw. Jugendverband bei den Demokratielaboren mitmachen?</h2>
+            <h2>  Wie kann man als Jugendeinrichtung bei den Demokratielaboren mitmachen?</h2>
             <div class="col-lg-9 col-lg-offset-2">
                 <div class="fond_red_gradient join__statement text__white">
                     <p>
