--- a/presse/index.html
+++ b/presse/index.html
@@ -13,6 +13,7 @@ title: Presse
 				<h1> Infomaterial </h1>
 					Hier findet ihr alle Infomaterialien zum Download:
 					<li><a class="text__blue text__black" href="/presse/Projektbeschreibung_Demokratielabore.pdf" download="/presse/Projektbeschreibung_Demokratielabore.pdf">Projektbeschreibung Demokratielabore</a></li>
+					<li><a class="text__blue text__black" href="/presse/Infopaket Jugendeinrichtungen.pdf" download="/presse/Infopaket Jugendeinrichtungen.pdf">Infopaket für Jugendeinrichtungen</a></li>
 					<br>
 				<h1> Pressespiegel </h1>
 					<li><span class="bold">06.01.2018</span> | <a href="https://www.fritz.de/programm/sendungen/sendungen/40/trackback/2017/180106-trb-550-henrike-moeller.html">Neues Webvideo-Format über Netzpolitik</a> (Fritz Radio/rbb)</li></ul>
